<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" tools:ignore="MissingTranslation">易安防</string>
    <!--登录页-->
    <string name="read"><u>阅读协议</u></string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="user_register"><u>注册</u></string>
    <string name="user_login">登录</string>
    <!--工作台-->
    <string name="quick_work">快捷工作</string>

    <!-- 首页 -->
    <string name="text_home_reapir">我要报修</string>
    <string name="text_home_install">我要报装</string>
    <string name="text_home_design">免费设计</string>
    <string name="text_home_lead_news">安防头条</string>
    <string name="text_home_circle">安防圈</string>
    <string name="text_home_mo">专家问答</string>
    <string name="text_home_monitor">实时监控</string>
    <string name="text_home_out_post">脱岗监测</string>
    <string name="text_work_repair">报修管控</string>
    <string name="text_work_install">报装管控</string>
    <string name="text_work_price">维修报价</string>
    <string name="text_work_maintain">维保管控</string>
    <string name="text_work_design">免费设计</string>
    <string name="text_work_transfer">交接班</string>
    <string name="text_device_info">设备信息</string>
    <string name="text_fault_info">故障信息</string>
    <string name="text_fault_description">详细描述</string>

    <!--IM-->
    <string name="all_group_member">全部群成员</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群名字</string>
    <string name="group_announcement">群公告</string>
    <string name="quit_group">退出群</string>
    <string name="dismiss_group">解散</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="group_transfer">转让群主</string>
    <string name="group_shutup">全员禁言</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="group_qrt">群二维码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_repair_personalinfo">用户信息</string>
    <string name="text_repair_contactslinfo">现场联系人信息</string>
    <string name="text_repair_selectlocation">选择定位</string>
    <string name="text_repair_arrivetime">到达时限:</string>
    <string name="text_next">下一步</string>
    <string name="text_fault">故障</string>
    <string name="text_vistor">拜访对象:</string>

    <string name="text_user_home_intro_default">这家伙很懒，没有留下任何内容</string>

    <string name="text_to_install_worker"><u>易安防技师端 >></u></string>
    <string name="text_home_company_designCount">设计：%1$d</string>
    <string name="text_home_company_goodRateCount">评价：%1$s</string>
    <string name="text_home_company_installCount">施工：%1$d</string>
    <string name="text_home_company_repairCount">维修：%1$d</string>
    <string name="text_home_company_worker_year">从业年限：%1$s</string>
    <string name="text_home_company_level">等级：Lv%1$d</string>
    <string name="text_home_company_consultCount">已有\t%1$d\t人咨询</string>
    <string name="text_home_repair_count">已有\t%1$d\t人 报装/报修</string>
    <string name="text_home_safe_run">您的设备已安全运行%d天</string>

    <string name="text_leave_post_detail_device_name">设备名称\t\t%1$s</string>
    <string name="text_leave_post_detail_post_name">岗位名称\t\t%1$s</string>
    <string name="text_leave_post_detail_area">所在地区\t\t%1$s</string>
    <string name="text_leave_post_detail_position">岗位位置\t\t%1$s</string>
    <string name="text_leave_post_detail_count">报警数量\t\t%1$d</string>
    <string name="text_leave_post_detail_status">岗位状态\t\t%1$s</string>
    <string name="text_leave_post_detail_device_status">设备状态\t\t%1$s</string>
    <string name="text_leave_post_detail_use">是否占用\t\t%1$s</string>
    <string name="text_leave_post_detail_serial_num">序列号\t\t\t%1$s</string>
    <string name="text_leave_post_detail_time">报警时间\t\t%1$s</string>
    <string name="text_leave_post_todo_count">今日待处理事件：%1$d</string>
    <string name="text_leave_post_history_alert_name">事件名称\t\t%1$s</string>
    <string name="text_leave_post_no_open_toast">暂未开通脱岗监测功能，请联系客服开通</string>
    <string name="quality_super_hd">超清</string>
    <string name="quality_hd">高清</string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="stream_type">stream type: </string>

</resources>
