<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/item_margin_10"
    android:layout_marginTop="@dimen/size_level5"
    android:layout_marginRight="@dimen/item_margin_10"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reparir"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_repair"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_reapir" />

        <TextView
            android:id="@+id/tv_install"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_install"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_install" />

        <TextView
            android:id="@+id/tv_design"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_design"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_design" />

        <TextView
            android:id="@+id/tv_lead_news"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_lead_news"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_lead_news" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_level4"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_circle"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_circle"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_circle" />

        <TextView
            android:id="@+id/tv_onLine"
            style="@style/style_client_home_meun"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_client_home_online"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_mo" />

        <TextView
            android:id="@+id/tv_monitor"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_monitor"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_monitor" />

        <TextView
            android:id="@+id/tv_out_post"
            style="@style/style_client_home_meun"
            android:drawableTop="@drawable/ic_client_home_out_post"
            android:drawablePadding="@dimen/dimen_16"
            android:text="@string/text_home_out_post" />


    </LinearLayout>
</LinearLayout>