<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/preview_selection_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_10"
    android:paddingBottom="@dimen/dimen_10">

    <Button
        android:id="@+id/quality_hd_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginBottom="@dimen/dimen_10"
        android:background="@color/transparent"
        android:text="@string/quality_hd"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_12" />

    <Button
        android:id="@+id/quality_balanced_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginBottom="@dimen/dimen_10"
        android:background="@color/transparent"
        android:text="@string/quality_balanced"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_12" />

    <Button
        android:id="@+id/quality_flunet_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginBottom="@dimen/dimen_10"
        android:background="@color/transparent"
        android:text="@string/quality_flunet"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_12" />
</LinearLayout>